# django-simple-sample

./: Dockerfile  README.md  pyproject.toml  release-up-django.sh  requirements.txt
django_simple_sample/: db.sqlite3  manage.py  requirements.txt
django_simple_sample/django_simple_sample/: asgi.py  settings.py  urls.py  wsgi.py
django_simple_sample/first_app/: admin.py  api.py  models.py  serializer.py  views.py
django_simple_sample/first_app/migrations/: 0001_initial.py  0002_usuario_escolaridade.py
django_simple_sample/first_app/templates/: welcome.html
django_simple_sample/first_app/templates/first_app/: welcome.html
