[tool.poetry]
name = "django-simple-sample"
version = "0.1.0"
description = ""
authors = ["Rafael Joia <rafael.joia@fgv.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.0"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
